modified index: added a catchphrase and our newest podcast following the user testing

--- a/templates/index.html
+++ b/templates/index.html
@@ -81,9 +81,11 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
+          <h1> Research released into the wild</h1>
           <img class="img-responsive" src="{{topic_image}}" alt="">
           <div class="intro-text">
-            <span class="name"> Oceans on Ganymede </span>
+            <h3>Our newest audio-doc: {{topic_name}} </h3>
+            <!--<span class="name"> Oceans on Ganymede </span> -->
             <span class="skills">The search for liquid on Jupiter's moon could reveal a habitat suitable for life </span>
           </div>
         </div>
