--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#page-top">Know it Wall</a>
+        <a class="navbar-brand" href="#page-top">The Knowit Wall</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -77,11 +77,10 @@
 
   <!-- Most Recent Podcast Section -->
   <header>
-
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h1> Research released into the wild</h1>
+          <h1> Experts Unplugged: Podcasts from academic researchers </h1>
           <img class="img-responsive" src="{{topic_image}}" alt="">
           <div class="intro-text">
             <h3>Our newest audio-doc: {{topic_name}} </h3>
@@ -217,10 +216,10 @@
       </div>
 
       <div class="col-lg-4 col-lg-offset-2">
-        <p>We're a bunch of fun loving academics who want to capture that pub chat experience for the entire world. Get an insight into the exciting world of academic research with our short 'audio-documentaries', on subjects like physics, history, philosophy, and many more.</p>
+        <p>We are a group of fun loving academics who want to capture that pub chat experience for the entire world. Get an insight into the exciting world of academic research with our short 'audio-documentaries' on physics, history, philosophy, and many more subjects.</p>
       </div>
       <div class="col-lg-4">
-        <p>All audio-docs were written by experts in the subject at hand (phd student, lecturers, professors) at some of the UK's top universities. They provide a first hand account of their discipline, and show us what makes it great.</p>
+        <p>All audio-docs were written by experts in the subject at hand (PhD students, lecturers, professors) at some of the UK's top universities. They provide first hand accounts of their discipline, and show us what makes it great.</p>
       </div>
     </div>
   </section>
@@ -234,11 +233,11 @@
           <hr class="star-primary">
         </div>
         <div class="col-md-4 col-md-offset-2 ">
-          <p> Are you an academic who is interested in reaching out to the public? Do you feel that your research is too interesting to be bound to academic journals, and that it must be released into the wild?<p>
+          <p> Are you an academic or PhD student who is interested in reaching out to the public? Do you feel that your research is too interesting to be bound to academic journals, and that it must be released into the wild?<p>
           </br>
         </div>
         <div class="col-md-4 col-md-offset-1 ">
-          <p> If so, then please get in touch. Fill in the contact form below with your name, email, and field of research and we will get back to you with more details. Please note that you must have a PhD to contribute to Knowitwall.<p>
+          <p> If so, then please get in touch. Fill in the contact form below with your name, email, and field of research/PhD topic and we will get back to you with more details.<p>
         </div>
       </div>
     </div>
