--- a/templates/index.html
+++ b/templates/index.html
@@ -56,9 +56,11 @@
           <li class="page-scroll">
             <a href="#page-top">Home</a>
           </li>
+<!--
           <li class="page-scroll">
             <a href="#Podcasts">Podcasts</a>
           </li>
+-->
           <li class="page-scroll">
             <a href="#about">About</a>
           </li>
@@ -91,9 +93,8 @@
 
         <div class="col-lg-12">
           <audio controls>
-            <source src="http://upload.wikimedia.org/wikipedia/commons/0/03/Linus-linux.ogg" type="audio/ogg">
             <source src="{{ audio }}" type="audio/mpeg">
-
+            <source src="http://upload.wikimedia.org/wikipedia/commons/0/03/Linus-linux.ogg" type="audio/ogg">
             Your browser does not support the audio element.
           </audio>
         </div>
@@ -112,7 +113,9 @@
     </div>
   </header>
 
-  <!-- Previous Podcasts Section -->
+
+  <!-- Previous Podcasts Section; I put loads of comments on the left to comment out the previous podcasts -->
+<!--
   <section id="Podcasts">
     <div class="container">
       <div class="row">
@@ -120,9 +123,10 @@
           <h2>Even more Podcasts!</h2>
           <hr class="star-primary">
         </div>
-
+-->
         <!-- Individual Podcasts -->
         <!-- Description -->
+<!--
         <div class="col-lg-8 col-lg-offset-2 text-center">
           <h2>The History of the Yen</h2>
           <p>Something about the podcast. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation </p>
@@ -144,10 +148,10 @@
                   <div id="playhead"></div>
                 </div>
             </div>
-          -->
         </div>
 
         <!-- Author -->
+<!--
         <div class="author-bio">
           <div class="col-md-4 col-md-offset-2">
             <h3 style="text-align:right;">James Baylin</h3>
@@ -158,12 +162,16 @@
         </div>
       </div>
       <!-- Podcast Divider -->
+-->
+<!--
       <div class="col-lg-12">
         <hr class="break-line">
       </div>
       <!-- CLOSE - Podcast Divider - CLOSE-->
 
       <!-- Description -->
+-->
+<!--
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <h2>The Dark side of Black holes</h2>
         <p>Something about the podcast. ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident </p>
@@ -186,9 +194,11 @@
           </div>
         </div>
         -->
+<!--
       </div>
 
       <!-- Author -->
+<!--
       <div class="col-md-4 col-md-offset-2">
         <h3 style="text-align:right;">Maureen Johnson</h3>
       </div>
@@ -196,15 +206,17 @@
       <div class="col-lg-4 offset-2">
         <p>As a fellow of the royal british institute, James Baylin disocvered the discharge from enigma 86 an unexploded star. </p>
       </div>
-
+-->
         <!-- Podcast Divider -->
+<!--
       <div class="col-lg-12">
         <hr class="break-line">
       </div>
         <!-- CLOSE - Podcast Divider - CLOSE-->
+<!--
     </div>
   </section>
-
+-->
   <!-- About Section -->
   <section class="success" id="about">
     <div class="container">
