--- a/templates/index.html
+++ b/templates/index.html
@@ -77,10 +77,13 @@
 
   <!-- Most Recent Podcast Section -->
   <header>
+    <div id="header-bg"  >
+            <h1> The best minds in one place </h1>
+            </div>
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h1> Experts Unplugged: Podcasts from academic researchers </h1>
+            
           <img class="img-responsive" src="{{topic_image}}" alt="">
           <div class="intro-text">
             <h3>Our newest audio-doc: {{topic_name}} </h3>
