--- a/templates/index.html
+++ b/templates/index.html
@@ -244,12 +244,12 @@
           <h2>Contribute</h2>
           <hr class="star-primary">
         </div>
-        <div class="col-md-4 col-md-offset-2 ">
+        <div class="col-lg-4 col-lg-offset-2 ">
           <p> Are you an academic or PhD student who is interested in reaching out to the public? Do you feel that your research is too interesting to be bound to academic journals, and that it must be released into the wild?<p>
-          </br>
+
         </div>
-        <div class="col-md-4 col-md-offset-1 ">
-          <p> If so, then please get in touch. Fill in the contact form below with your name, email, and field of research/PhD topic and we will get back to you with more details.<p>
+        <div class="col-lg-4">
+          <p> If so, then please get in touch. Fill in the contact form below with your name, email, and field of research/PhD topic and we will get back to you with more details.</p>
         </div>
       </div>
     </div>
