--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,8 @@
 
   <title>Know it Wall</title>
 
+  <link href="/static/css/audioplayer.css" rel="stylesheet">
+
   <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
   <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
@@ -97,7 +99,7 @@
         </div>
 
         <div class="col-lg-12">
-          <audio controls>
+          <audio preload="auto" controls>
             <source src="{{ audio }}" type="audio/mpeg">
             <source src="http://upload.wikimedia.org/wikipedia/commons/0/03/Linus-linux.ogg" type="audio/ogg">
             Your browser does not support the audio element.
@@ -371,6 +373,16 @@
 
   <!-- Custom Theme JavaScript -->
   <script src="/static/js/knowitwall.js"></script>
+
+  <script src="/static/js/audioplayer.js"></script>
+
+
+  <script>
+    $( function()
+    {
+        $( 'audio' ).audioPlayer();
+    });
+  </script>
 
 </body>
 </html>
