--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
 -->
 <!--
           <li class="page-scroll">
-            <a href="#Podcasts">Podcasts</a>
+            <a href="#episodes">episodes</a>
           </li>
 -->
           <li class="page-scroll">
@@ -94,7 +94,7 @@
           <div class="intro-text">
             <h3>Our newest audio-doc: {{topic_name}} </h3>
             <!--<span class="name"> Oceans on Ganymede </span> -->
-            <span class="skills">The search for liquid on Jupiter's moon could reveal a habitat suitable for life </span>
+            <span class="skills">{{topic_description}} </span>
           </div>
         </div>
 
@@ -121,19 +121,19 @@
   </header>
 
 
-  <!-- Previous Podcasts Section; I put loads of comments on the left to comment out the previous podcasts -->
-<!--
-  <section id="Podcasts">
+  <!-- Previous episodes Section; I put loads of comments on the left to comment out the previous episodes -->
+
+  <section id="episodes">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2>Even more Podcasts!</h2>
+          <h2>Even more episodes!</h2>
           <hr class="star-primary">
         </div>
--->
-        <!-- Individual Podcasts -->
+
+        <!-- Individual episodes -->
         <!-- Description -->
-<!--
+
         <div class="col-lg-8 col-lg-offset-2 text-center">
           <h2>The History of the Yen</h2>
           <p>Something about the podcast. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation </p>
@@ -158,7 +158,7 @@
         </div>
 
         <!-- Author -->
-<!--
+
         <div class="author-bio">
           <div class="col-md-4 col-md-offset-2">
             <h3 style="text-align:right;">James Baylin</h3>
@@ -169,16 +169,16 @@
         </div>
       </div>
       <!-- Podcast Divider -->
--->
-<!--
+
+
       <div class="col-lg-12">
         <hr class="break-line">
       </div>
       <!-- CLOSE - Podcast Divider - CLOSE-->
 
       <!-- Description -->
--->
-<!--
+
+
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <h2>The Dark side of Black holes</h2>
         <p>Something about the podcast. ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident </p>
@@ -189,23 +189,10 @@
           <source src="http://upload.wikimedia.org/wikipedia/commons/0/03/Linus-linux.ogg" type="audio/ogg">
           Your browser does not support the audio element.
         </audio>
-        <!--
-        <audio id="music" preload="true">
-          <source src="http://www.alexkatz.me/codepen/music/interlude.mp3">
-          <source src="http://www.alexkatz.me/codepen/music/interlude.ogg">
-        </audio>
-        <div id="audioplayer">
-          <button id="pButton" class="play" onclick="play()"></button>
-          <div id="timeline">
-            <div id="playhead"></div>
-          </div>
-        </div>
-        -->
-<!--
       </div>
 
       <!-- Author -->
-<!--
+
       <div class="col-md-4 col-md-offset-2">
         <h3 style="text-align:right;">Maureen Johnson</h3>
       </div>
@@ -213,17 +200,17 @@
       <div class="col-lg-4 offset-2">
         <p>As a fellow of the royal british institute, James Baylin disocvered the discharge from enigma 86 an unexploded star. </p>
       </div>
--->
+
         <!-- Podcast Divider -->
-<!--
+
       <div class="col-lg-12">
         <hr class="break-line">
       </div>
         <!-- CLOSE - Podcast Divider - CLOSE-->
-<!--
+
     </div>
   </section>
--->
+
   <!-- About Section -->
   <section class="success" id="about">
     <div class="container">
@@ -233,7 +220,6 @@
           <hr class="star-light">
         </div>
       </div>
-
       <div class="col-lg-4 col-lg-offset-2">
         <p>We are a group of fun loving academics who want to capture that pub chat experience for the entire world. Get an insight into the exciting world of academic research with our short 'audio-documentaries' on physics, history, philosophy, and many more subjects.</p>
       </div>
@@ -253,7 +239,6 @@
         </div>
         <div class="col-lg-4 col-lg-offset-2 ">
           <p> Are you an academic or PhD student who is interested in reaching out to the public? Do you feel that your research is too interesting to be bound to academic journals, and that it must be released into the wild?<p>
-
         </div>
         <div class="col-lg-4">
           <p> If so, then please get in touch. Fill in the contact form below with your name, email, and field of research/PhD topic and we will get back to you with more details.</p>
