--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,9 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#page-top">The Knowit Wall</a>
+        <a class="navbar-brand" href="#">
+                    <img src="/static/Images/KIW-logo-286px.png" alt="Know It Wall">
+        </a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -79,7 +81,7 @@
   <header>
     <div id="header-bg"  >
             <h1> The best minds in one place </h1>
-            </div>
+    </div>
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -93,18 +95,32 @@
         </div>
 
         <div class="col-lg-12">
-          <audio controls>
-            <source src="http://upload.wikimedia.org/wikipedia/commons/0/03/Linus-linux.ogg" type="audio/ogg">
-            <source src="{{ audio }}" type="audio/mpeg">
 
-            Your browser does not support the audio element.
-          </audio>
+
+<audio preload="auto" controls>
+    
+    <source src="http://upload.wikimedia.org/wikipedia/commons/0/03/Linus-linux.ogg" />
+    <source src="audio.wav" />
+    <source src="audio.mp3" />
+</audio>
+
+<script src="jquery.js"></script>
+<script src="audioplayer.js"></script>
+<script>
+    $( function()
+    {
+        $( 'audio' ).audioPlayer();
+    });
+</script>
+          
+            
         </div>
 
         <!-- Author -->
         <div class="author-bio">
           <div class="col-md-4 col-md-offset-2">
             <h2 style="text-align:right;"> {{author_name}} </h2>
+
             <img class="img-responsive" src="{{author_image}}" alt = "author image">
           </div>
           <div class="col-lg-4 offset-2">
