got disqus in index. now need to allow multiple convos

--- a/templates/index.html
+++ b/templates/index.html
@@ -141,6 +141,19 @@
               <source src="http://upload.wikimedia.org/wikipedia/commons/0/03/Linus-linux.ogg" type="audio/ogg">
               Your browser does not support the audio element.
             </audio>
+            <div id="disqus_thread"></div>
+            <script type="text/javascript">
+              /* * * CONFIGURATION VARIABLES * * */
+              var disqus_shortname = 'knowitwall';
+
+              /* * * DON'T EDIT BELOW THIS LINE * * */
+              (function() {
+                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+              })();
+            </script>
+            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
           </div>
 
           <!-- Author -->
@@ -182,18 +195,8 @@
             <source src="http://upload.wikimedia.org/wikipedia/commons/0/03/Linus-linux.ogg" type="audio/ogg">
             Your browser does not support the audio element.
           </audio>
-          <!--
-          <audio id="music" preload="true">
-            <source src="{{ audio }}">
-            <source src="{{ audio }}">
-          </audio>
-            <div id="audioplayer">
-              <button id="pButton" class="play" onclick="play()"></button>
-                <div id="timeline">
-                  <div id="playhead"></div>
-                </div>
-            </div>
-        </div>
+
+
 
         <!-- Author -->
 
@@ -405,6 +408,22 @@
     {
         $( 'audio' ).audioPlayer();
     });
+  </script>
+
+
+  <!-- Disqus script -->
+
+  <script type="text/javascript">
+      /* * * CONFIGURATION VARIABLES * * */
+      var disqus_shortname = 'knowitwall';
+
+      /* * * DON'T EDIT BELOW THIS LINE * * */
+      (function () {
+          var s = document.createElement('script'); s.async = true;
+          s.type = 'text/javascript';
+          s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+          (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+      }());
   </script>
 
 </body>
