--- a/templates/index.html
+++ b/templates/index.html
@@ -122,15 +122,35 @@
   <!-- Most Recent Podcast Section -->
   <header>
     <div id="header-bg"  >
+    <div class="col-lg-12">
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+             width="200px" height="200px" viewBox="0 0 300 300" enable-background="new 0 0 300 300" xml:space="preserve">
+          <g id="layer1_1_" transform="translate(-241.83035,-280.77737)">
+            <path id="text2413_1_" fill="#145B64" d="M458.486,380.57c-6.245,43.299-9.364,73.506-9.364,90.63
+              c0,35.64,9.161,53.47,27.489,53.47c12.887,0,26.38-7.557,40.479-22.659l5.737,3.933c-9.668,22.352-18.27,37.152-25.825,44.4
+              c-7.553,7.254-15.861,10.877-24.923,10.877c-13.897,0-23.816-8.358-29.758-25.074c-5.938-16.715-8.911-35.844-8.911-57.395
+              c0-21.146,2.814-49.442,8.462-84.89c-21.547,22.153-48.539,56.597-80.962,103.317c-20.143,28.999-33.733,46.929-40.779,53.77
+              c-7.049,6.853-15.41,10.273-25.078,10.273c-14.7,0-22.052-7.252-22.052-21.749c0-7.652,2.919-14.754,8.761-21.302
+              c5.839-6.543,19.638-17.271,41.386-32.17c6.243-40.885,9.364-70.693,9.364-89.418c0-35.449-9.266-53.17-27.791-53.17
+              c-12.684,0-26.076,7.551-40.175,22.654l-6.045-3.928c15.911-36.855,32.828-55.282,50.751-55.282
+              c13.692,0,23.562,8.305,29.609,24.923c6.04,16.619,9.057,35.803,9.057,57.55c0,21.346-2.723,49.538-8.157,84.583
+              c23.971-24.165,50.253-57.493,78.854-99.991c18.924-27.995,32.57-46.166,40.932-54.526c8.355-8.357,17.369-12.533,27.032-12.533
+              c6.649,0,11.933,2.111,15.861,6.34c3.926,4.232,5.892,9.368,5.892,15.41c0,8.059-3.021,15.407-9.062,22.05
+              C493.229,357.311,479.63,367.281,458.486,380.57L458.486,380.57z"/>
+          </g>
+          </svg>
+
             <h1> The best minds in one place </h1>
     </div>
+  </div>
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
 
-          <img class="img-responsive" src="{{topic_image}}" alt="">
+          
           <div class="intro-text">
-            <h3>Our newest audio-doc: {{topic_name}} </h3>
+            <h3>Hot off the press! </h3>
+             <h2>{{topic_name}}</h2>
             <!--<span class="name"> Oceans on Ganymede </span> -->
             <span class="skills">{{topic_description}} </span>
           </div>
