trying to pull jons changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -141,6 +141,7 @@
               <source src="http://upload.wikimedia.org/wikipedia/commons/0/03/Linus-linux.ogg" type="audio/ogg">
               Your browser does not support the audio element.
             </audio>
+            <!--
             <div id="disqus_thread"></div>
             <script type="text/javascript">
               /* * * CONFIGURATION VARIABLES * * */
@@ -155,6 +156,8 @@
             </script>
             <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
           </div>
+        -->
+
 
           <!-- Author -->
           <div class="author-bio">
@@ -196,7 +199,19 @@
             Your browser does not support the audio element.
           </audio>
 
+          <div id="disqus_thread"></div>
+          <script type="text/javascript">
+            /* * * CONFIGURATION VARIABLES * * */
+            var disqus_shortname = 'life-on-ganymede';
 
+            /* * * DON'T EDIT BELOW THIS LINE * * */
+            (function() {
+              var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+              dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+              (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+            })();
+          </script>
+          <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 
         <!-- Author -->
 
@@ -412,7 +427,7 @@
 
 
   <!-- Disqus script -->
-
+<!--
   <script type="text/javascript">
       /* * * CONFIGURATION VARIABLES * * */
       var disqus_shortname = 'knowitwall';
@@ -425,6 +440,7 @@
           (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
       }());
   </script>
+-->
 
 </body>
 </html>
