--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
 
   <link href="/static/css/audioplayer.css" rel="stylesheet">
 
+
   <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
   <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
@@ -21,7 +22,7 @@
 
   <!-- Custom Fonts -->
   <link href="/static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+  <link href='http://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
   <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -37,6 +38,8 @@
 
   <!-- Navigation -->
   <nav class="navbar navbar-default navbar-fixed-top">
+    
+
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header page-scroll">
@@ -114,16 +117,20 @@
         </ul>
       <!-- /.navbar-collapse -->
       </div>
+      
     <!-- /.container-fluid -->
+
     </div>
+
   </nav>
 
   <!-- Most Recent Podcast Section -->
   <header>
 
     <div id="header-bg"  >
-    <div class="col-lg-12">
-                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+
+    
+<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
              width="200px" height="200px" viewBox="0 0 300 300" enable-background="new 0 0 300 300" xml:space="preserve">
           <g id="layer1_1_" transform="translate(-241.83035,-280.77737)">
             <path id="text2413_1_" fill="#145B64" d="M458.486,380.57c-6.245,43.299-9.364,73.506-9.364,90.63
@@ -140,9 +147,22 @@
           </g>
           </svg>
 
-            <h1> The best minds in one place </h1>
+
+<div class="col-lg-12">
+                
+
+
+
+         <h1> The best minds in one place </h1> 
+
+            
     </div>
+
+    <canvas id="waves"> </canvas>
   </div>
+
+    
+
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -165,19 +185,31 @@
 
           <!-- Author -->
           <div class="author-bio">
-            <div class="col-md-4 col-md-offset-2">
-              <h2 style="text-align:right;"> {{author_name}} </h2>
-
+            <div class="col-md-3">
               <img class="img-responsive" src="{{author_image}}" alt = "author image">
             </div>
-            <div class="col-lg-4 offset-2">
+            <div class="col-md-3">
+              <h2 style="text-align:right;"> {{author_name}} </h2>
+            </div>
+              
+    
+            <div class="col-md-6">
               <p> {{ author_bio }} </p>
             </div>
           </div>
         </div>
       </div>
 
-      <div id="disqus_thread"></div>
+
+
+
+
+
+<div class="disqus-reveal">Comments</div>
+<div style="display:none;">
+ 
+
+  <div id="disqus_thread"></div>
             <script type="text/javascript">
               /* * * CONFIGURATION VARIABLES * * */
               var disqus_shortname = 'knowitwall';
@@ -190,6 +222,13 @@
               })();
             </script>
             <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+             <div class="disqus-collapse" style="display:none;">Collapse Text</div>
+</div>
+
+      
+
+
+
           </div>
   </header>
 <!-- Disqus -->
@@ -236,13 +275,18 @@
         <!-- Author -->
 
         <div class="author-bio">
-          <div class="col-md-4 col-md-offset-2">
-            <h3 style="text-align:right;">James Baylin</h3>
+            <div class="col-md-3">
+              <img class="img-responsive" src="{{author_image}}" alt = "author image">
+            </div>
+            <div class="col-md-3">
+              <h2 style="text-align:right;"> {{author_name}} </h2>
+            </div>
+              
+    
+            <div class="col-md-6">
+              <p> {{ author_bio }} </p>
+            </div>
           </div>
-          <div class="col-lg-4 offset-2">
-            <p style="text-align:left;"> James Baylin is a dude... </p>
-          </div>
-        </div>
       </div>
       <!-- Podcast Divider -->
 
@@ -269,13 +313,19 @@
 
       <!-- Author -->
 
-      <div class="col-md-4 col-md-offset-2">
-        <h3 style="text-align:right;">Maureen Johnson</h3>
-      </div>
-
-      <div class="col-lg-4 offset-2">
-        <p>As a fellow of the royal british institute, James Baylin disocvered the discharge from enigma 86 an unexploded star. </p>
-      </div>
+      <div class="author-bio">
+            <div class="col-md-3">
+              <img class="img-responsive" src="{{author_image}}" alt = "author image">
+            </div>
+            <div class="col-md-3">
+              <h2 style="text-align:right;"> {{author_name}} </h2>
+            </div>
+              
+    
+            <div class="col-md-6">
+              <p> {{ author_bio }} </p>
+            </div>
+          </div>
 
         <!-- Podcast Divider -->
 
@@ -445,6 +495,200 @@
     });
   </script>
 
+<script>
+$('.disqus-reveal').click(function() {
+    $(this).slideUp(100);
+    $(this).next().slideToggle();
+    $(".disqus-collapse").slideDown(100);
+});
+$('.disqus-collapse').click(function() {
+    $(this).slideUp(100);
+    $(this).prev().slideToggle();
+    $(".disqus-reveal").slideDown(100);
+}); 
+ 
+</script>
+
+<script>
+function SineWaveGenerator(options) {
+  $.extend(this, options || {});
+  
+  if(!this.el) { throw "No Canvas Selected"; }
+  this.ctx = this.el.getContext('2d');
+  
+  if(!this.waves.length) { throw "No waves specified"; }
+  
+  // Internal
+  this._resizeWidth();
+  window.addEventListener('resize', this._resizeWidth.bind(this));
+  // User
+  this.resizeEvent();
+  window.addEventListener('resize', this.resizeEvent.bind(this));
+  
+  if(typeof this.initialize === 'function') {
+    this.initialize.call(this);
+  }
+  // Start the magic
+  this.loop();
+}
+
+// Defaults
+SineWaveGenerator.prototype.speed = 1;
+SineWaveGenerator.prototype.amplitude = 30;
+SineWaveGenerator.prototype.wavelength = 50;
+SineWaveGenerator.prototype.segmentLength = 10;
+
+SineWaveGenerator.prototype.lineWidth = 2;
+SineWaveGenerator.prototype.strokeStyle  = 'rgba(255, 255, 255, 0.2)';
+
+SineWaveGenerator.prototype.resizeEvent = function() {};
+
+// fill the screen
+SineWaveGenerator.prototype._resizeWidth = function() {
+  this.dpr = window.devicePixelRatio || 1;
+  
+  this.width = this.el.width = window.innerWidth * this.dpr;
+  this.height = this.el.height = window.innerHeight * this.dpr;
+  this.el.style.width = window.innerWidth + 'px';
+  this.el.style.height = window.innerHeight + 'px';
+  
+  this.waveWidth = this.width * 0.95;
+  this.waveLeft = this.width * 0.025;
+}
+
+SineWaveGenerator.prototype.clear = function () {
+  this.ctx.clearRect(0, 0, this.width, this.height);
+}
+
+SineWaveGenerator.prototype.time = 0;
+
+SineWaveGenerator.prototype.update = function(time) {  
+  this.time = this.time - 0.007;
+  if(typeof time === 'undefined') {
+    time = this.time;
+  }
+
+  var index = -1;
+  var length = this.waves.length;
+
+  while(++index < length) {
+    var timeModifier = this.waves[index].timeModifier || 1;
+    this.drawSine(time * timeModifier, this.waves[index]);
+  }
+  index = void 0;
+  length = void 0;
+}
+
+// Constants
+var PI2 = Math.PI * 2;
+var HALFPI = Math.PI / 2;
+
+SineWaveGenerator.prototype.ease = function(percent, amplitude) {
+  return amplitude * (Math.sin(percent * PI2 - HALFPI) + 1) * 0.5;
+}
+
+SineWaveGenerator.prototype.drawSine = function(time, options) {
+  options = options || {};
+  amplitude = options.amplitude || this.amplitude;
+  wavelength = options.wavelength || this.wavelength;
+  lineWidth = options.lineWidth || this.lineWidth;
+  strokeStyle = options.strokeStyle || this.strokeStyle;
+  segmentLength = options.segmentLength || this.segmentLength;
+  
+  var x = time;
+  var y = 0;  
+  var amp = this.amplitude;
+ 
+  // Center the waves
+  var yAxis = this.height / 2; 
+  
+  // Styles
+  this.ctx.lineWidth = lineWidth * this.dpr;
+  this.ctx.strokeStyle = strokeStyle;
+  this.ctx.lineCap = 'round';
+  this.ctx.lineJoin = 'round';
+  this.ctx.beginPath();
+  
+  // Starting Line
+  this.ctx.moveTo(0, yAxis);
+  this.ctx.lineTo(this.waveLeft, yAxis);
+  
+  for(var i = 0; i < this.waveWidth; i += segmentLength) {
+    x = (time * this.speed) + (-yAxis + i) / wavelength; 
+    y = Math.sin(x); 
+    
+    // Easing
+    amp = this.ease(i / this.waveWidth, amplitude); 
+    
+    this.ctx.lineTo(i + this.waveLeft, amp * y + yAxis);
+    
+    amp = void 0;
+  }
+  
+  // Ending Line
+  this.ctx.lineTo(this.width, yAxis);
+  
+  // Stroke it
+  this.ctx.stroke();
+  
+  // Clean up
+  options = void 0;
+  amplitude = void 0;
+  wavelength = void 0;
+  lineWidth = void 0;
+  strokeStyle = void 0;
+  segmentLength = void 0;
+  x = void 0;
+  y = void 0;
+} 
+
+SineWaveGenerator.prototype.loop = function() {
+  this.clear();
+  this.update();
+  
+  window.requestAnimationFrame(this.loop.bind(this));
+}
+
+new SineWaveGenerator({
+  el: document.getElementById('waves'),
+  
+  speed: 8,
+  
+  waves: [
+    {
+      timeModifier: 1,
+      lineWidth: 20,
+      amplitude: 150,
+      wavelength: 200,
+      segmentLength: 20,
+//       strokeStyle: 'rgba(255, 255, 255, 0.5)'
+    }
+    
+  ],
+  
+  initialize: function (){
+
+  },
+  
+  resizeEvent: function() {
+    var gradient = this.ctx.createLinearGradient(0, 0, this.width, 0);
+    gradient.addColorStop(0,"rgba(0, 0, 0, 0)");
+    gradient.addColorStop(0.5,"rgba(255, 255, 255, 0.5)");
+    gradient.addColorStop(1,"rgba(0, 0, 0, 0)");
+    
+    var index = -1;
+    var length = this.waves.length;
+    while(++index < length){
+      this.waves[index].strokeStyle = gradient;
+    }
+    
+    // Clean Up
+    index = void 0;
+    length = void 0;
+    gradient = void 0;
+  }
+});
+          </script>
 
   <!-- Disqus script -->
 <!--
